// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageModalIcon > props > :icon[function] 1`] = `
<div
  class="t-image-viewer__modal-icon"
>
  <svg
    class="t-icon t-icon-zoom-in t-size-m"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <g
      id="zoom-in"
    >
      <path
        d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
        fill="transparent"
        id="fill1"
      />
      <path
        d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033ZM15.8033 15.8033L21.1066 21.1066"
        id="stroke1"
        stroke="currentColor"
        stroke-linecap="square"
        stroke-width="2"
      />
      <path
        d="M10.5 13.5V10.5M10.5 10.5L10.5 7.5M10.5 10.5H7.5M10.5 10.5H13.5"
        id="stroke2"
        stroke="currentColor"
        stroke-linecap="square"
        stroke-width="2"
      />
    </g>
  </svg>
  <!---->
</div>
`;

exports[`ImageModalIcon > props > :label[string] 1`] = `
<div
  class="t-image-viewer__modal-icon"
>
  <svg
    class="t-icon t-icon-zoom-in t-size-m"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <g
      id="zoom-in"
    >
      <path
        d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033Z"
        fill="transparent"
        id="fill1"
      />
      <path
        d="M15.8033 15.8033C12.8744 18.7322 8.12563 18.7322 5.1967 15.8033C2.26777 12.8744 2.26777 8.12563 5.1967 5.1967C8.12563 2.26777 12.8744 2.26777 15.8033 5.1967C18.7322 8.12563 18.7322 12.8744 15.8033 15.8033ZM15.8033 15.8033L21.1066 21.1066"
        id="stroke1"
        stroke="currentColor"
        stroke-linecap="square"
        stroke-width="2"
      />
      <path
        d="M10.5 13.5V10.5M10.5 10.5L10.5 7.5M10.5 10.5H7.5M10.5 10.5H13.5"
        id="stroke2"
        stroke="currentColor"
        stroke-linecap="square"
        stroke-width="2"
      />
    </g>
  </svg>
  <span
    class="t-image-viewer__modal-icon-label"
  >
    150%
  </span>
</div>
`;
